[UPDATE]separate swagger file
