# app/Http/Controllers/API/Admin/RoleController.php
@@ -13,59 +13,11 @@ use Spatie\Permission\Models\Role;
 
 class RoleController extends ApiController
 {
-    /**
-     *  @SWG\Get(
-     *     path="/api/roles",
-     *     tags={"roles"},
-     *     summary="Get all roles",
-     *     produces={"application/json"},
-     *     @SWG\Response(
-     *          response=200,
-     *          description="data",
-     *          @SWG\Schema(ref="#/definitions/Role Response")
-     *          
-     *     ),
-     *     @SWG\Response(
-     *          response=422,
-     *          description="error details",
-     *
-     *     ),
-     *     security={{"Bearer":{}}}
-     * )
-     *
-     */
     public function index()
     {
-        return $this->output(true, Role::all());
+        return $this->response(true, Role::all());
     }
 
-    /**
-     *  @SWG\Post(
-     *     path="/roles/{id}",
-     *     tags={"roles"},
-     *     summary="Create new role",
-     *     produces={"application/json"},
-     *     @SWG\Parameter(
-     *          name="body",
-     *          in="body",
-     *          required=true,
-     *          @SWG\Schema(ref="#/definitions/Role")
-     *     ),
-     *     @SWG\Response(
-     *          response=200,
-     *          description="data",
-     *          @SWG\Schema(ref="#/definitions/Role Response")
-
-     *     ),
-     *     @SWG\Response(
-     *          response=422,
-     *          description="error details",
-     *
-     *     ),
-     *     security={{"Bearer":{}}},
-     * )
-     *
-     */
     public function store(RoleRequest $request)
     {
         $request->validated();
@@ -74,38 +26,13 @@ class RoleController extends ApiController
             $input = $request->only(['name']);
             $role = Role::create($input);
 
-            return $this->output(true, $role);
+            return $this->response(true, $role);
 
         } catch (\Exception $e) {
-            return $this->output(false, $e->getMessage());
+            return $this->response(false, $e->getMessage());
         }
     }
 
-    /**
-     *  @SWG\PUT(
-     *     path="/roles/{id}",
-     *     tags={"roles"},
-     *     summary="Update a role",
-     *     @SWG\Parameter(
-     *          name="body",
-     *          in="body",
-     *          required=true,
-     *          @SWG\Schema(ref="#/definitions/Role")
-     *     ),
-     *     @SWG\Response(
-     *          response=200,
-     *          description="data",
-     *          @SWG\Schema(ref="#/definitions/Role Response")
-     *     ),
-     *     @SWG\Response(
-     *          response=422,
-     *          description="error details",
-     *
-     *     ),
-     *     security={{"Bearer":{}}}
-     * )
-     *
-     */
     public function update(RoleRequest $request, $id)
     {
         $role = Role::findOrFail($id);
@@ -117,42 +44,23 @@ class RoleController extends ApiController
 
             $role->fill($input)->save();
 
-            return $this->output(true, $role);
+            return $this->response(true, $role);
 
         } catch (\Exception $e) {
-            return $this->output(false, $e->getMessage());
+            return $this->response(false, $e->getMessage());
         }
 
     }
 
-    /**
-     *  @SWG\DELETE(
-     *     path="/roles/{id}",
-     *     tags={"roles"},
-     *     summary="Delete a role",
-     *     @SWG\Response(
-     *          response=200,
-     *          description="data",
-     *          @SWG\Schema(ref="#/definitions/Role Response")
-     *     ),
-     *     @SWG\Response(
-     *          response=422,
-     *          description="error details",
-     *
-     *     ),
-     *     security={{"Bearer":{}}}
-     * )
-     *
-     */
     public function destroy($id)
     {
         $role = Role::findOrFail($id);
 
         try {
             $role->delete();
-            return $this->output(true, Role::all());
+            return $this->response(true, Role::all());
         } catch (\Exception $e) {
-            return $this->output(false, $e->getMessage());
+            return $this->response(false, $e->getMessage());
         }
     }
 }
