# app/Http/Controllers/API/UserController.php
@@ -12,23 +12,15 @@ use Spatie\Permission\Models\Role;
 
 class UserController extends ApiController
 {
-    /**
-     * @SWG\SecurityScheme(
-     *     securityDefinition="implicit",
-     *     token_type="Bearer"
-     *     type="oauth2",
-     *     flow="implicit",
-     *     in="header",
-     * )
-     */
+    
     public function login()
     {
         if (Auth::attempt(['email' => request('email'), 'password' => request('password')])) {
 
-            return $this->output(true, Auth::user());
+            return $this->response(true, Auth::user());
 
         } else {
-            return $this->output(false, 'Unauthorized');
+            return $this->response(false, 'Unauthorized');
         }
     }
 
@@ -36,40 +28,10 @@ class UserController extends ApiController
     {
         $user = Auth::user();
         $token = $user->createToken('token')->accessToken;
-        return $this->output(true, Auth::user());
+        return $this->response(true, Auth::user());
     }
 
-    /**
-     * @SWG\Post(
-     *     path="/register",
-     *     summary="Register user",
-     *     tags={"user"},
-     *     @SWG\Parameter(
-     *          name="body",
-     *          in="body",
-     *          required=true,
-     *          @SWG\Schema(
-     *              title="User",
-     *              type="object",
-     *              @SWG\Property(property="first_name", type="string"),
-     *              @SWG\Property(property="last_name", type="string"),
-     *              @SWG\Property(property="username", type="string"),
-     *              @SWG\Property(property="email", type="string"),
-     *              @SWG\Property(property="role", type="integer"),
-     *          ),
-     *     ),
-     *     @SWG\Response(
-     *          response=200,
-     *          description="success",
-     *          @SWG\Schema(ref="#/definitions/User"),
-     *     ),
-     *     @SWG\Response(
-     *         response=422,
-     *         description="error details",
-     *     ),
-     *     security={{"Bearer":{}}}
-     * )
-     */
+    
     public function register(UserRequest $request)
     {
         $request->validated();
@@ -90,32 +52,15 @@ class UserController extends ApiController
 
             $success['token'] = $user->createToken('token')->accessToken;
 
-            return $this->output(true, $success);
+            return $this->response(true, $success);
 
         } catch (\Exception $e) {
-            return $this->output(false, $e->getMessage());
+            return $this->response(false, $e->getMessage());
         }
 
     }
 
-    /**
-     * @SWG\Get(
-     *     path="/profile",
-     *     tags={"user"},
-     *     summary="User's Profile",
-     *     @SWG\Response(
-     *          response=200,
-     *          description="success",
-     *          @SWG\Schema(ref="#/definitions/User"),
-     *     ),
-     *     @SWG\Response(
-     *          response=422,
-     *          description="error details",
-     *
-     *     ),
-     *     security={{"Bearer":{}}}
-     * )
-     */
+    
     public function profile()
     {
 
@@ -123,31 +68,13 @@ class UserController extends ApiController
             $user = Auth::user();
             $user->getRoleNames();
 
-            return $this->output(true, $user);
+            return $this->response(true, $user);
 
         } catch (\Exception $e) {
-            return $this->output(false, $e->getMessage());
+            return $this->response(false, $e->getMessage());
         }
     }
-
-    /**
-     * @SWG\Get(
-     *     path="/logout",
-     *     tags={"user"},
-     *     summary="Logout",
-     *      @SWG\Response(
-     *          response=200,
-     *          description="success",
-     *
-     *     ),
-     *     @SWG\Response(
-     *          response=422,
-     *          description="Unprocessable Entity",
-     *
-     *     ),
-     *     security={{"Bearer":{}}}
-     * )
-     */
+    
     public function logout(Request $request)
     {
 
@@ -158,11 +85,11 @@ class UserController extends ApiController
             $token = $request->user()->tokens->find($token_id);
             $token->revoke();
 
-            return $this->output(true, 'Logged out successfully');
+            return $this->response(true, 'Logged out successfully');
 
         } catch (\Exception $e) {
 
-            return $this->output(false, $e->getMessage());
+            return $this->response(false, $e->getMessage());
         }
 
     }
